--- a/index.html
+++ b/index.html
@@ -836,5 +836,11 @@ body {
             });
         });
     </script>
+    <div style="text-align: center; margin-top: 50px; padding: 30px; border-top: 2px solid #e5e7eb;">
+    <a href="mode-emploi.html" style="display: inline-block; background: #3b82f6; color: white; padding: 15px 30px; border-radius: 8px; text-decoration: none; font-size: 1.1em; font-weight: bold;">
+        Consulter le mode d'emploi
+    </a>
+    <p style="margin-top: 15px; color: #6b7280;">Comment ajouter du texte alternatif sur chaque réseau social</p>
+</div>
 </body>
 </html>
