--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@ body {
             });
         });
     </script>
-    <div style="text-align: center; margin-top: 50px; padding: 30px; border-top: 2px solid #e5e7eb;">
+   <div style="text-align: center; margin-top: 50px; padding: 30px; background: transparent;">
     <a href="mode-emploi.html" style="display: inline-block; background: #3b82f6; color: white; padding: 15px 30px; border-radius: 8px; text-decoration: none; font-size: 1.1em; font-weight: bold;">
         Consulter le mode d'emploi
     </a>
