--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@ body {
                                     >
                                         <option value="">Sélectionner...</option>
                                         <option value="photo">Photo</option>
+                                           <option value="Visuel">Visuel</option>
                                         <option value="illustration">Illustration</option>
                                         <option value="graphique">Graphique</option>
                                         <option value="infographie">Infographie</option>
@@ -350,6 +351,10 @@ body {
                                     <fieldset>
                                         <legend class="block text-sm font-medium text-gray-800 mb-2">Sélectionnez les réseaux présents</legend>
                                         <div class="grid grid-cols-2 md:grid-cols-3 gap-2 mb-3">
+                                             <label class="flex items-center space-x-2 text-gray-800 cursor-pointer">
+                                                <input type="checkbox" class="social-network rounded text-blue-500 focus:ring-blue-500" value="Bluesky">
+                                                <span>Bluesky</span>
+                                            </label>
                                             <label class="flex items-center space-x-2 text-gray-800 cursor-pointer">
                                                 <input type="checkbox" class="social-network rounded text-blue-500 focus:ring-blue-500" value="Facebook">
                                                 <span>Facebook</span>
